# Syntrel

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-MIT  NOTICE  README.md  TODO.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
cogs/: botinfo.py  help.py
cogs/events/: __init__.py  baitbot.py  mention.py  stickybot.py
cogs/fun/: __init__.py  coinflip.py  eightball.py  minesweeper.py  randomfact.py  rockpaperscissors.py
cogs/general/: __init__.py  bitcoin.py  botinfo.py  context_menus.py  eightball.py  feedback.py  help.py  invite.py  ping.py  server.py  serverinfo.py  uptime.py  userinfo.py
cogs/idevice/: __init__.py  developermode.py  error_codes.py  errorcodes.json  idevice.py  mountddi.py  noapps.py
cogs/livecontainer/: 26jit.py  __init__.py  jit26.py  livecontainer.py
cogs/media/: __init__.py  download.py  img2gif.py  mcquote.py  tts.py  tweety.py
cogs/melonx/: __init__.py  error.py  gamecrash.py  ios26.py  legal.py  melonx.py  mods.py  requirements.py  transfer.py  upgrade.py
cogs/miscellaneous/: __init__.py  color.py  depart.py  docs.py  dontasktoask.py  duck.py  google.py  keanu.py  labubu.py  piracy.py  rickroll.py  rr.py  sigma.py  silly.py  support.py  tryitandsee.py
cogs/moderation/: __init__.py  archive.py  ban.py  hackban.py  kick.py  nick.py  purge.py  softban.py  timeout.py  warnings.py
cogs/owner/: cog_management.py  invite.py  logs.py  say.py  shutdown.py  (+1 more)
database/: __init__.py  schema.sql
utils/: __init__.py  ascii_art.py  checks.py  contributors.py  logging.py  signal.py  time.py
(+28 files in other folders)
